--- a/mozer/hw2/app/src/main/res/values/colors.xml
+++ b/mozer/hw2/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="indigo_500">#3F51B5</color>
+    <color name="red_800">#C62828</color>
+    <color name="red_a700">#D50000</color>
+    <color name="red_500">#F44336</color>
+    <color name="trans50_white">#80FFFFFF</color>
+    <color name="trans100">#00000000</color>
 </resources>
