--- a/mozer/hw2/app/src/main/res/layout/activity_main.xml
+++ b/mozer/hw2/app/src/main/res/layout/activity_main.xml
@@ -40,18 +40,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <!--                <TextView-->
-                <!--                    android:id="@+id/tvNameBook"-->
-                <!--                    android:layout_width="wrap_content"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:layout_marginTop="52dp"-->
-
-                <!--                    android:textColor="@color/black"-->
-                <!--                    android:textSize="20sp"-->
-                <!--                    android:textStyle="bold"-->
-                <!--                    app:layout_constraintStart_toStartOf="parent"-->
-                <!--                    app:layout_constraintTop_toBottomOf="@id/ivCapture" />-->
-
                 <TextView
                     android:id="@+id/tvAuthor"
                     android:layout_width="wrap_content"
@@ -82,21 +70,22 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:text="656 p."
+                    android:background="@drawable/strikethrough_text"
                     android:textSize="20sp"
                     app:layout_constraintStart_toEndOf="@id/tvPrice"
                     app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
 
                 <TextView
                     android:id="@+id/tvDiscount"
-                    android:layout_width="56dp"
+                    android:layout_width="52dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/oval_shape"
+                    android:layout_marginTop="22dp"
+                    android:background="@drawable/oval_shape_red"
                     android:gravity="center"
                     android:text="-45%"
                     android:textColor="@color/white"
-                    android:textSize="14sp"
+                    android:textSize="12sp"
                     app:layout_constraintStart_toEndOf="@id/tvOldPrice"
                     app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
 
@@ -130,20 +119,93 @@
         android:padding="16dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lorem"
-            android:textSize="18sp" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:text="@string/excerptPDF"
+                android:textColor="@color/indigo_500"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/promotionsByProduct"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="260dp"
+                android:layout_height="86dp"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="@color/gray"
+                app:cardCornerRadius="2dp">
+
+                <TextView
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/oval_shape_black"
+                    android:backgroundTint="@color/black"
+                    android:gravity="center"
+                    android:text="45%"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="58dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="@string/discountBestBuyDay"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="Осталось 3 дней 6 часов"
+                    android:textColor="@color/red_a700" />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/description"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/lorem"
+                android:textSize="18sp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     </androidx.core.widget.NestedScrollView>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="56dp"
         android:layout_gravity="bottom"
-        android:background="@color/trans50_white"
+        android:background="@color/trans80_white"
         android:paddingStart="16dp"
         android:paddingEnd="16dp">
 
@@ -154,17 +216,18 @@
             android:layout_weight="1"
             android:backgroundTint="@color/red_500"
             android:text="@string/toCart" />
+
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@color/trans100"
-            app:icon="@drawable/ic_favorite_border"
-            app:iconTint="@color/black"
-            app:iconGravity="textStart"
             android:text="@string/saveToFavorites"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            app:icon="@drawable/ic_favorite_border"
+            app:iconGravity="textStart"
+            app:iconTint="@color/black" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
