--- a/mozer/hw2/app/src/main/res/values/colors.xml
+++ b/mozer/hw2/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red_800">#C62828</color>
     <color name="red_a700">#D50000</color>
     <color name="red_500">#F44336</color>
-    <color name="trans50_white">#80FFFFFF</color>
+    <color name="trans80_white">#CCFFFFFF</color>
     <color name="trans100">#00000000</color>
+    <color name="gray">#F5F5F5</color>
 </resources>
