--- a/mozer/hw3/app/src/main/res/values/colors.xml
+++ b/mozer/hw3/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#90F1FF</color>
+    <color name="dark_green">#006874</color>
+    <color name="light_green">#CCF8FF</color>
+    <color name="black_text">#191C1D</color>
 </resources>
