--- a/mozer/hw3/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw3/app/src/main/res/layout/card_view.xml
@@ -6,9 +6,9 @@
     android:layout_margin="16dp"
     app:cardCornerRadius="8dp"
     android:backgroundTint="@color/white"
-    app:cardElevation="3dp">
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    tools:parentTag="com.example.hw3.ContentCardView">-->
+    app:cardElevation="3dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="com.example.hw3.ContentCardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
+            android:textStyle="bold"
             android:textColor="@color/black_text"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,15 +39,15 @@
             app:layout_constraintTop_toBottomOf="@id/title" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/capture"
+            android:id="@+id/picture"
             android:layout_width="0dp"
             android:layout_height="216dp"
             android:layout_marginTop="12dp"
             app:layout_constraintBottom_toTopOf="@id/btnAction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitle"
-            app:srcCompat="@drawable/image" />
+            app:layout_constraintTop_toBottomOf="@id/subtitle"/>
+<!--            app:srcCompat="@drawable/image" />-->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAction"
@@ -59,6 +60,6 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/capture" />
+            app:layout_constraintTop_toBottomOf="@id/picture" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
