--- a/barsukova/hw3-4/app/src/main/res/layout/content_card_view.xml
+++ b/barsukova/hw3-4/app/src/main/res/layout/content_card_view.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginHorizontal="4dp"
-    android:layout_marginVertical="2dp">
-
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/corner_radius"
+    app:cardElevation="@dimen/elevation"
+    tools:parentTag="com.example.lesson3.ContentCardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
             android:id="@+id/cardContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/margin_start_for_card_content"
+            android:layout_marginEnd="@dimen/margin_end_for_card_content"
             android:text="@string/card_with_content"
             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,8 +28,8 @@
             android:id="@+id/cardDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/margin_start_for_card_description"
+            android:layout_marginEnd="@dimen/margin_end_for_card_description"
             android:text="@string/content_description"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,8 +41,8 @@
             android:id="@+id/cardImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/margin_start_for_card_image"
+            android:layout_marginEnd="@dimen/margin_end_for_card_image"
             android:adjustViewBounds="true"
             android:src="@drawable/cat_1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,16 +50,16 @@
             app:layout_constraintTop_toBottomOf="@+id/cardDescription" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/cardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="@dimen/margin_start_for_card_button"
+            android:layout_marginEnd="@dimen/margin_end_for_card_button"
             android:background="@color/transparent"
             android:text="@string/action"
             android:textColor="@color/teal_700"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardImage" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+
+</merge>
