--- a/mozer/hw3/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw3/app/src/main/res/layout/card_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    app:cardCornerRadius="8dp"
     android:backgroundTint="@color/white"
+    app:cardCornerRadius="8dp"
     app:cardElevation="3dp"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:parentTag="com.example.hw3.ContentCardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,12 +18,13 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
-            android:textStyle="bold"
             android:textColor="@color/black_text"
             android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,10 +32,11 @@
             android:id="@+id/subtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginHorizontal="16dp"
             android:text="@string/subtitle"
             android:textColor="@color/black_text"
             android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
@@ -46,8 +48,8 @@
             app:layout_constraintBottom_toTopOf="@id/btnAction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitle"/>
-<!--            app:srcCompat="@drawable/image" />-->
+            app:layout_constraintTop_toBottomOf="@id/subtitle" />
+        <!--            app:srcCompat="@drawable/image" />-->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnAction"
