--- a/mozer/hw3/app/src/main/res/layout/activity_main.xml
+++ b/mozer/hw3/app/src/main/res/layout/activity_main.xml
@@ -44,42 +44,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:backgroundTint="@color/white"
-        android:orientation="vertical"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-            <com.example.hw3.ContentCardView
-                android:id="@+id/picture1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <com.example.hw3.ContentCardView
-                android:id="@+id/picture2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <com.example.hw3.ContentCardView
-                android:id="@+id/picture3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <com.example.hw3.ContentCardView
-                android:id="@+id/picture4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.core.widget.NestedScrollView>
-
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_dodgeInsetEdges="bottom" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
