--- a/mozer/hw3/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw3/app/src/main/res/layout/card_view.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginTop="16dp"
     android:backgroundTint="@color/white"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="3dp"
     tools:parentTag="com.example.hw3.ContentCardView">
 
@@ -40,38 +41,43 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/cardText"
+        <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:textColor="@color/black_text"
-            android:textSize="14sp"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/subtitle" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/cardText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            android:ellipsize="end"
+            android:textColor="@color/black_text"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@id/picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider"
+            app:layout_goneMarginBottom="16dp"
+            tools:text="Some very long text that probably won't fit on a single line." />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/picture"
+            style="@style/Theme.Hw3.SelectedCornerRadius"
             android:layout_width="0dp"
-            android:layout_height="216dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintBottom_toTopOf="@id/btnAction"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/subtitle" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@android:color/transparent"
-            android:text="@string/btnAction"
-            android:textColor="@color/dark_green"
-            android:textSize="14sp"
+            android:layout_height="380dp"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/picture" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardText"
+            tools:src="@color/black" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
