--- a/mozer/hw3/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/mozer/hw3/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:icon="@drawable/ic_home"
-        android:title="@string/home"
-        app:showAsAction="always"/>
-    <item android:icon="@drawable/ic_search"
-        android:title="@string/recent"
-        app:showAsAction="always"/>
+    <item android:icon="@drawable/ic_feed"
+        android:title="@string/feed"
+        app:showAsAction="ifRoom"/>
+    <item android:icon="@drawable/ic_explore"
+        android:title="@string/explore"
+        app:showAsAction="ifRoom"/>
     <item android:icon="@drawable/ic_account"
         android:title="@string/profile"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 </menu>
