--- a/patrusheva/lesson2/app/src/main/res/layout/activity_main.xml
+++ b/patrusheva/lesson2/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             app:layout_constraintStart_toEndOf="@id/productPrice"
             app:layout_constraintTop_toBottomOf="@id/productAuthor"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/productOldPriceCrossing"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
