hw8 : added text check

--- a/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
+++ b/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
@@ -10,7 +10,8 @@
         android:id="@+id/grid"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="8dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
