--- a/tarasov/lesson4/app/src/main/res/menu/bottom_navigation.xml
+++ b/tarasov/lesson4/app/src/main/res/menu/bottom_navigation.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="?android:attr/actionModeWebSearchDrawable"
+        android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/recent" />
     <item
         android:id="@+id/page_3"
