--- a/tarasov/lesson4/app/src/main/res/values/colors.xml
+++ b/tarasov/lesson4/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primal">#006874</color>
+    <color name="fab_background">#90F1FF</color>
 </resources>
