--- a/patrusheva/lesson3/app/src/main/res/layout/item_card.xml
+++ b/patrusheva/lesson3/app/src/main/res/layout/item_card.xml
@@ -15,6 +15,7 @@
             android:id="@+id/cardTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="14dp"
@@ -55,9 +56,7 @@
             android:id="@+id/cardActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="18dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="18dp"
+            android:layout_margin="8dp"
             android:text="@string/card_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
