--- a/patrusheva/lesson5/app/src/main/res/values/colors.xml
+++ b/patrusheva/lesson5/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#006874</color>
     <color name="light_blue">#90F1FF</color>
-    <color name="grey">#DBE4E6</color>
+    <color name="grey">#14212121</color>
 </resources>
