--- a/tsvetkova/HW4/app/src/main/res/layout/activity_main.xml
+++ b/tsvetkova/HW4/app/src/main/res/layout/activity_main.xml
@@ -40,15 +40,15 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top|center"
-        android:paddingBottom="@dimen/bottom_navigation_height"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/bottom_padding_card"
+        android:paddingTop="8dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:id="@+id/cards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
             android:orientation="vertical">
 
             <com.example.hw4.CustomCardView
@@ -94,6 +94,6 @@
         android:background="@color/sea"
         app:itemIconTint="@color/bottom_navigation_tint"
         app:itemTextColor="@color/bottom_navigation_tint"
-        app:menu="@menu/navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/navigation"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
