--- a/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
+++ b/mozer/hw6/app/src/main/res/layout/fragment_list_notes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/start_view"
     android:transitionName="shared_element_container"
     android:layout_width="match_parent"
@@ -11,7 +12,8 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        tools:listitem="@layout/item_note">
 
     </androidx.recyclerview.widget.RecyclerView>
 
