--- a/mozer/hw6/app/src/main/res/layout/item_note.xml
+++ b/mozer/hw6/app/src/main/res/layout/item_note.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.Material3.CardView.Filled"
+    style="@style/Widget.Material3.CardView.Elevated"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:elevation="12dp"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="12dp">
 
@@ -15,7 +16,7 @@
         android:layout_margin="8dp"
         android:textSize="16sp"
         tools:text="Note text that resizes the card vertically to fit itself Note text that resizes the card vertically to fit itself Note text that resizes the card vertically to fit itself"
-        android:textColor="@color/black" />
+         />
 
 
 </com.google.android.material.card.MaterialCardView>
