--- a/mozer/hw6/app/src/main/res/values-night/themes.xml
+++ b/mozer/hw6/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="colorSurface">@color/surface_dark</item>
         <item name="colorOnSurfaceVariant">@color/on_surface_variant_dark</item>
+        <item name="colorOnSurface">@color/on_surface_dark</item>
         <item name="colorError">@color/error</item>
         <item name="colorOnError">@color/on_error</item>
 
