--- a/mozer/hw6/app/src/main/res/values/colors.xml
+++ b/mozer/hw6/app/src/main/res/values/colors.xml
@@ -24,11 +24,11 @@
     <color name="primary_dark">#4FD8EB</color>
     <color name="primary_container_dark">#004F59</color>
     <color name="on_primary_container_dark">#90F1FF</color>
-    <color name="secondary_container_dark">#000</color>
+    <color name="secondary_container_dark">#334B4F</color>
     <color name="on_secondary_container_dark">#CDE7EC</color>
     <color name="surface_dark">#191C1D</color>
     <color name="on_surface_dark">#E0E3E3</color>
-    <color name="surface_variant_dark">#000</color>
+    <color name="surface_variant_dark">#3F484A</color>
     <color name="on_surface_variant_dark">#BFC8CA</color>
     <color name="background_dark">#191C1D</color>
 </resources>
